# CppLlmCLI

./: .gitignore  CMakeLists.txt  CMakeLists_new.txt  README.md  SESSION_REPORT.md  TESTING_REPORT.md  build.py  config.demo.json  config.example.json  config.json  config.yaml  llm-repl.ps1  llm-repl.py  repl_runner.py  test_suite.sh  validate.py
.cache/clangd/index/: config.cpp.BC5375AB5911DD5C.idx  config.cpp.D01F00FE9E86EDA7.idx  config.hpp.3D8895814DEF7048.idx  config.hpp.F4BA336EAC999BC3.idx  conversation.cpp.5BE0626AE1CA337B.idx  conversation.cpp.5D6CC8DF70FEB8E0.idx  conversation.hpp.717599E85CC40D99.idx  conversation.hpp.981BECDCD0A9FA04.idx  groq_service.cpp.0C2F89CA561AD769.idx  groq_service.cpp.D7C9B162A6987F90.idx  groq_service.hpp.3EAD598C335FBEDD.idx  groq_service.hpp.CEEA58FCDC866F5C.idx  http_client.cpp.BEA3534C08628FC9.idx  http_client.cpp.E6D513DFED518EC9.idx  http_client.hpp.62FC7341B9E66FA9.idx  http_client.hpp.8B37A5371D709810.idx  llm_service.hpp.0A74EA70845C07DB.idx  llm_service.hpp.E293416D2E945169.idx  main.cpp.45F03AECC4365FF5.idx  main.cpp.D9BC89EA7F10A83B.idx  message.hpp.66DBB73A82A8E42B.idx  message.hpp.89C51F06A76F1DDB.idx  repl.cpp.AF741BC825CD39EF.idx  repl.cpp.F3C88962240A10D2.idx  repl.hpp.2E6059904A5098DD.idx  repl.hpp.97BB76EC6C79E95F.idx
src/: main.cpp
src/http/: http_client.cpp  http_client.hpp  unified_http_client.cpp  windows_http_client.cpp
src/llm/: groq_service.cpp  groq_service.hpp  llm_service.hpp
src/models/: conversation.cpp  conversation.hpp  message.hpp
src/repl/: repl.cpp  repl.hpp
src/utils/: config.cpp  config.hpp  logger.hpp
tests/: CMakeLists.txt
tests/functional/: test_end_to_end.cpp  test_real_api_integration.cpp
tests/integration/: test_llm_http_integration.cpp  test_repl_integration.cpp
tests/mocks/: mock_http_client.hpp  mock_llm_service.hpp
tests/unit/: test_config.cpp  test_conversation.cpp  test_groq_service.cpp  test_http_client.cpp  test_message.cpp
tests/utils/: test_helpers.cpp  test_helpers.hpp
